<resources>
    <string name="app_name">AdoptMeApp</string>
    <!-- ボタンのテキスト -->
    <string name="btLogin">ログイン</string>
    <string name="btMakeAccount">新規登録</string>
    <string name="tbTopPage">トップページ</string>>

    <!-- ログイン入力画面のテキスト-->
    <string name="editTextEmail">メールアドレス</string>
    <string name="editTextPassword">パスワード</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btDetails">詳細</string>

    <string name="nav_item_vaccination">ワクチン接種</string>
    <string name="nav_item_adopt">犬猫譲渡</string>
    <string name="nav_item_event_announcement">イベント情報</string>

    <string name="nav_item_info_create_update">情報の登録・更新</string>
    <string name="nav_item_help">ヘルプ</string>
    <string name="nav_item_settings">設定</string>
    <string name="nav_item_logout">ログアウト</string>
    <string name="header_userName_text">ミケ猫 さん</string>
</resources>