<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/nvTopPage"
        android:checkableBehavior="single">

        <item
            android:id="@+id/infoCreateUpdate"
            android:icon="@drawable/ic_info_create_update"
            android:title="@string/nav_item_info_create_update"
            android:checked="false"/>

        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/nav_item_settings"
            android:checked="false"/>

        <item
            android:id="@+id/helps"
            android:icon="@drawable/ic_help_outline"
            android:title="@string/nav_item_help"
            android:checked="false"/>
    </group>
</menu>